# TheLastBolt

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  SaveManager.cpp  TheLastBolt.vcxproj  TheLastBolt.vcxproj.filters  build-windows.sh  main.cpp  toolchain-mingw64.cmake
Project1/: Project1.vcxproj
data/: card.json  enemies.json  map.json  node.txt
include/: BattleSystem.h  CardSystem.h  CommonTypes.h  EnemyAI.h  GameManager.h  MapSystem.h  NodeManager.h  RewardSystem.h  SaveManager.h  StorySystem.h  UI.h
src/: BattleSystem.cpp  CardSystem.cpp  CommonTypes.cpp  EnemyAI.cpp  GameManager.cpp  MapSystem.cpp  NodeManager.cpp  RewardSystem.cpp  SaveManager.cpp  StorySystem.cpp  UI.cpp  UITest.cpp  flowOfWork.txt  workflow.txt
